--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="main.js"></script>
-    <title>Laboration 1 - Prison break</title>
+    <title>The Adventures Of A Bounty Hunter - Chapter One - Prison break</title>
 </head>
 <body>
     
